--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@
 }
 
 .hmbgg {
-    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSC9yYFcS9dMy-g-G5TlCNNsSqji1HZNEnMe6RiRZ44gvEwzMdIHMaNtQUW&s=10');
+    background-image: url('https://media.istockphoto.com/id/1645455800/photo/empty-dark-black-room-background-black-gradient-texture-for-display-your-product.webp?a=1&b=1&s=612x612&w=0&k=20&c=Hnr7hEI0OOJxzHVOCUZFDR74ApZEbNsbYS1ktQpXOxQ=');
     height: cover;
     background-size: cover;
     color: white;
